# django-playground

./: .gitignore  README.md
post_command/: manage.py  pyproject.toml
post_command/post/: README.md  models.py
post_command/post/management/commands/: hide_posts.py
post_command/post/migrations/: 0001_initial.py
post_command/post_command/: asgi.py  settings.py  urls.py  wsgi.py
post_mixin_and_factory/: README.md  manage.py  pyproject.toml
post_mixin_and_factory/post/: comment_factory.py  create_dummy_posts.py  models.py  post_factory.py  test_comment_factory.py  test_post_factory.py  views.py
post_mixin_and_factory/post/migrations/: 0001_initial.py  0002_comment.py  0003_alter_post_status.py
post_mixin_and_factory/post_mixin_and_factory/: asgi.py  settings.py  urls.py  wsgi.py
